@@ -1,5 +1,13 @@
 2015-04-06  Ola Jeppsson  <ola@adapteva.com>
 
+	* apps/e-bandwidth-test/build.sh: Don't build srec file
+	* apps/e-bandwidth-test/src/e-bandwidth-test-host.c: Use .elf
+	instead of srec.
+	(int main): Fix segfault.
+	(int SRAM_speed): Repeat tests to get more stable results.
+
+2015-04-06  Ola Jeppsson  <ola@adapteva.com>
+
 	* apps/matmul-16/host/src/matmul_host.c: Fix compilation errors.
 
 2015-04-04  Andreas Olofsson  <andreas@adapteva.com>
